# ff2_telegram_ui

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml
k8s/: deployment.yaml
src/: config.py  engine.py  main.py
src/handlers/: choose_period_handlers.py  export_handlers.py  get_id_handlers.py  main_handlers.py  registration_handlers.py  settings_handlers.py  transaction_handlers.py
src/messages/: choose_period_texts.py  errors.py  get_id_texts.py  main_texts.py  setting_texts.py  texts.py  transaction_texts.py
src/utils/: backend_client.py  exceptions.py  fsm.py  keyboard_generators.py  keyboards.py  middlewares.py  models.py  validators.py
tests/: test_keyboard_generator.py
