[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Denis Ivanov <dnb8866@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
async-lru = "^2.0.4"
flake8 = "^7.1.1"
sentry-sdk = "^2.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
